@@ -1,3 +1,7 @@
+2009-07-01	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* Makefile.am, preinstall.am: Update for generic interrupt support.
+
 2009-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* console/ps2_mouse.c: Fix inconsistent spacing.
